--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "node.js-es6-Cloudinary-CRUD-upload-master",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon --exec babel-node ./src/index.js",
+    "build": "rimraf dist && babel ./src --out-dir dist ",
+    "start": "node ./dist/index.js "
   },
   "repository": {
     "type": "git",
@@ -15,5 +18,42 @@
   "bugs": {
     "url": "https://github.com/goranjako/node.js-es6-Cloudinary-CRUD/issues"
   },
-  "homepage": "https://github.com/goranjako/node.js-es6-Cloudinary-CRUD#readme"
+  "homepage": "https://github.com/goranjako/node.js-es6-Cloudinary-CRUD#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.5",
+    "@babel/node": "^7.15.4",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/register": "^7.15.3",
+    "@babel/runtime": "^7.15.4",
+    "babel-loader": "^8.2.2",
+    "babel-watch": "^7.5.0",
+    "compression": "^1.7.4",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "rimraf": "^3.0.2"
+  },
+  "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express-mongo-sanitize": "^2.1.0",
+    "express-rate-limit": "^5.3.0",
+    "express-session": "^1.17.2",
+    "express-validator": "^6.12.1",
+    "helmet": "^4.6.0",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.7",
+    "nodemon": "^2.0.12",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-jwt": "^4.0.0",
+    "pm2": "^5.1.1",
+    "socket.io": "^4.2.0",
+    "xss-clean": "^0.1.1"
+  }
 }
