--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.27.0",
     "cors": "^2.8.5",
     "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "^5.3.0",
@@ -47,6 +48,8 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.7",
+    "multer": "^1.4.3",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^2.0.12",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
