--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb://localhost:27017/mongouploadcloud
+MONGODB_URI=mongodb://localhost:27017/mongouploadcloudinary
 MONGODB_TEST_URI=mongodb://mongo:27017/testgogiauth
 SECRET_TOKEN=catswillruletheworld.
